--- a/scss/style.scss
+++ b/scss/style.scss
@@ -22,5 +22,39 @@ main{
 }
 
 
-@import "catalog.scss";
+.slick-track{
+  display: flex;
+}
+
+.slick-list {
+  overflow: hidden;
+}
+
+.slick-dots{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.slick-dots li{
+  margin: 0 7px;
+}
+
+.slick-dots button{
+  font-size: 0;
+  width: 12px;
+  height: 12px;
+  background-color: rgba(255,255,255,0.0);
+  border: 2px solid #ffffff;
+  border-radius: 50%;
+}
+/*
+.slick-active{
+  font-size: 0;
+  border-radius: 50%;
+  width: 12px;
+  height: 12px;
+  background-color: #ffffff;
+}*/
+@import "banner.scss";
 @import "adaptive.scss";
