--- a/scss/banner.scss
+++ b/scss/banner.scss
@@ -1,11 +1,7 @@
-main{
+.banner{
     height: 787px;
     background-color: #de5d5d;
-}
-
-.slick-slider__item{
-    img{
-        width: 1554px;
-        height: 887px;
+    .slick-slider__list{
     }
 }
+/*background: url("../img/iphone.png") 0 0/100% no-repeat;*/
