--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,6 +3,10 @@
 @font-face {
   font-family: 'Varela Round', sans-serif;
 }
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+@font-face {
+  font-family: 'Montserrat', sans-serif;
+}
 
 body{
   height: 100%;
@@ -25,6 +29,14 @@ main{
   margin: 0 auto;
 }
 
+/* cta button style */
+@mixin ctabutton{
+  display: inline-block;
+  font-size: 30px;
+  line-height: 1.2;
+  font-weight: 400;
+  color: #ffffff;
+}
 
 .slick-track{
   display: flex;
@@ -60,5 +72,6 @@ main{
   height: 12px;
   background-color: #ffffff;
 }*/
+
 @import "banner.scss";
 @import "adaptive.scss";
