--- a/scss/_banner.scss
+++ b/scss/_banner.scss
@@ -1,12 +1,13 @@
 .banner{
-  height: 697px;
+  margin-top: 98px;
+  height: 689px;
   background: #de5d5d url('../img/iphone.png') 230px 0 no-repeat;
-  .container{
+  .container-custom{
     .cta-block{
       margin: 0 auto;
       h2{
         font-family: 'Montserrat', sans-serif;
-        padding-top: 205px;
+        padding-top: 196px;
         margin-left: 163px;
         color: #ffffff;
         font-size: 90px;
@@ -17,7 +18,7 @@
         text-align: center;
       }
       &__buttons{
-        margin: 68px 0 0 33.4%;
+        margin: 70px 0 0 33.4%;
         display: flex;
         justify-content: space-between;
         max-width: 543px;
