--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,4 @@
-@import "nullstyle.scss";
+@import "_nullstyle.scss";
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans&family=Varela+Round&display=swap');
 @font-face {
   font-family: 'Varela Round', sans-serif;
@@ -29,9 +29,10 @@ main{
   flex-direction: column;
 }
 
-.container{
+.container-custom{
   max-width: 1170px;
-  margin: 0 auto;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .slick-track{
@@ -69,7 +70,8 @@ main{
   background-color: #ffffff;
 }*/
 
-@import "header.scss";
-@import "banner.scss";
-@import "benefits.scss";
-@import "adaptive.scss";
+@import "_header.scss";
+@import "_banner.scss";
+@import "_benefits.scss";
+@import "_share.scss";
+@import "_adaptive.scss";
